-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.4.0 FF
-
None
-
1ea478ad73 (qt-extensions/qthttpserver/dev) 1ea478ad73 (qt/qthttpserver/6.4)
agent:2022/03/24 04:03:23 build.go:394: C:\Users\qt\work\qt-extensions\qthttpserver\src\httpserver\qhttpserverrequest_p.h(86): error C2220: the following warning is treated as an error agent:2022/03/24 04:03:23 build.go:394: C:\Users\qt\work\qt-extensions\qthttpserver\src\httpserver\qhttpserverrequest_p.h(86): warning C4996: 'qGlobalQHashSeed': Use QHashSeed instead
Details: https://testresults.qt.io/coin/integration/qt-extensions/qthttpserver/tasks/1648094407
Tested changes (refs/builds/qtci/dev/1648094405):
https://codereview.qt-project.org/c/qt-extensions/qthttpserver/+/402291/2 Update dependencies on 'dev' in qt-extensions/qthttpserver