Use QHashSeed::globalSeed() instead of deprecated qGlobalQHashSeed()

Fixes: QTBUG-102000
Change-Id: Ifbb09af5d2c48d3cee697b42b664e76d278f5162
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Jesus Fernandez <jsfdez@gmail.com>